<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:id="@+id/recycler_item_relative"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_round_rectangle"

    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/viewA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_recycler_item"
                        android:layout_width="match_parent"
                        android:layout_height="163dp"
                        android:orientation="horizontal"
                        android:scaleType="fitXY"
                        android:src="@drawable/index_pic_sample" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:layout_centerHorizontal="true"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/large_margin"
                        android:paddingLeft="@dimen/medium_margin"
                        android:paddingTop="@dimen/low_margin"
                        android:paddingRight="@dimen/large_margin">

                        <com.example.myapplication.view.YEKANRegularTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:background="@drawable/shape_txt_transparent"
                            android:paddingLeft="@dimen/medium_margin"
                            android:layout_marginTop="6dp"
                            android:paddingBottom="6dp"
                            android:paddingRight="@dimen/medium_margin"

                            android:text="@string/type"
                            android:textColor="@color/white"
                            android:textSize="@dimen/low_font_size" />

                        <com.example.myapplication.view.YEKANRegularTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/low_margin"
                            android:layout_marginLeft="@dimen/low_margin"
                            android:background="@drawable/shape_txt_transparent"
                            android:paddingLeft="@dimen/medium_margin"

                            android:paddingRight="@dimen/medium_margin"
                            android:layout_marginTop="6dp"
                            android:paddingBottom="6dp"
                            android:text="@string/position"
                            android:textColor="@color/white"
                            android:textSize="@dimen/low_font_size" />


                    </LinearLayout>


                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/viewB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.example.myapplication.view.YEKANRegularTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/low_margin"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/low_margin"
                    android:paddingLeft="@dimen/low_margin"
                    android:text="@string/price"
                    android:textColor="@color/TitleGreen"

                    android:textSize="@dimen/medium_font_size20" />

                <com.example.myapplication.view.YEKANRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="@dimen/low_margin"
                    android:paddingLeft="@dimen/low_margin"
                    android:text="@string/address"
                    android:textAlignment="center"
                    android:textColor="@color/colordesc"
                    android:textSize="@dimen/low_font_size"

                    />
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:backgroundTint="@color/white"

            android:src="@drawable/ic_disable_heart"
            app:fabSize="mini"
            app:borderWidth="0dp"
            app:layout_anchor="@id/viewA"
            app:layout_anchorGravity="bottom|right|end" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coordinator"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/low_margin"
            android:layout_marginLeft="@dimen/low_margin"
            android:layout_marginTop="@dimen/low_margin"
            android:layout_marginEnd="@dimen/large_font_size"
            android:layout_marginRight="@dimen/large_font_size"
            android:layout_marginBottom="@dimen/low_margin"
            android:background="@color/colordesc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/low_margin"
            android:paddingBottom="@dimen/low_margin"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.example.myapplication.view.YEKANRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:gravity="center"
                    android:text="3"
                    android:textAlignment="center"
                    android:textColor="@color/colordesc"
                    android:textSize="@dimen/low_font_size"

                    />

                <com.example.myapplication.view.YEKANRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:text="@string/floors"
                    android:textAlignment="center"
                    android:textColor="@color/colordesc"
                    android:textSize="@dimen/low_font_size"

                    />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:scaleType="fitEnd"
                    android:src="@drawable/ic_investment" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.example.myapplication.view.YEKANRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:gravity="center"
                    android:text="3"
                    android:textAlignment="center"
                    android:textColor="@color/colordesc"
                    android:textSize="@dimen/low_font_size"

                    />

                <com.example.myapplication.view.YEKANRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="2dp"
                    android:gravity="center"
                    android:text="@string/rooms"
                    android:textAlignment="center"
                    android:textColor="@color/colordesc"
                    android:textSize="@dimen/low_font_size"

                    />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:scaleType="fitEnd"
                    android:src="@drawable/ic_bed_room" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.example.myapplication.view.YEKANRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:gravity="center"
                    android:text="3"
                    android:textAlignment="center"
                    android:textColor="@color/colordesc"
                    android:textSize="@dimen/low_font_size"

                    />

                <com.example.myapplication.view.YEKANRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:text="@string/area"
                    android:textAlignment="center"
                    android:textColor="@color/colordesc"
                    android:textSize="@dimen/low_font_size"

                    />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:scaleType="fitEnd"
                    android:src="@drawable/ic_house" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>